# Aria

./: .gitignore  API.md  ARCHITECTURE.md  AUDIT_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  GATE_TABLE.md  MODELS.md  Makefile  README.md  RELEASE_NOTES.md  SKILLS.md  STRUCTURE.md  pyproject.toml
.github/workflows/: ci.yml
aria_agents/: coordinator.py  loader.py  scoring.py
aria_engine/: __init__.py  agent_pool.py  auto_session.py  chat_engine.py  circuit_breaker.py  config.py  context_manager.py  entrypoint.py  exceptions.py  llm_gateway.py  memory_cache.py  metrics.py  roundtable.py  routing.py  scheduler.py  session_manager.py  session_protection.py  session_titles.py  streaming.py  swarm.py  telemetry.py  thinking.py  tool_registry.py
aria_mind/: AGENTS.md  ARIA.md  AWAKENING.md  GOALS.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md  ORCHESTRATION.md  RPG.md  SECURITY.md  SKILLS.md  TOOLS.md  cognition.py  cron_jobs.yaml  heartbeat.py  memory.py  metacognition.py  security.py  startup.py
aria_mind/skills/: _skill_registry.py  _tracking.py
aria_mind/soul/: __init__.py  focus.py
aria_models/: README.md  __init__.py  loader.py  models.yaml
aria_skills/: HOW_TO_ADD_A_SKILL.md  SKILL_AUTO_WIRING_SPEC.md  __init__.py  base.py  registry.py
aria_skills/_template/: SKILL.md
aria_skills/agent_manager/: __init__.py  skill.json
aria_skills/api_client/: __init__.py
aria_skills/brainstorm/: skill.json
aria_skills/browser/: __init__.py
aria_skills/conversation_summary/: __init__.py
aria_skills/data_pipeline/: skill.json
aria_skills/experiment/: __init__.py
aria_skills/fact_check/: __init__.py
aria_skills/focus/: SKILL.md  __init__.py  skill.json  skill.yaml
aria_skills/goals/: __init__.py  skill.json
aria_skills/hourly_goals/: skill.json
aria_skills/knowledge_graph/: __init__.py  cache.py
aria_skills/litellm/: __init__.py
aria_skills/llm/: __init__.py
aria_skills/market_data/: skill.json
aria_skills/memeothy/: __init__.py
aria_skills/memory_compression/: __init__.py
aria_skills/model_switcher/: __init__.py
aria_skills/moltbook/: __init__.py
aria_skills/moonshot/: __init__.py
aria_skills/ollama/: __init__.py
aria_skills/performance/: __init__.py  skill.json
aria_skills/portfolio/: skill.json
aria_skills/pytest_runner/: __init__.py  skill.json
aria_skills/sandbox/: __init__.py  skill.json
aria_skills/schedule/: skill.json
aria_skills/security_scan/: skill.json
aria_skills/session_manager/: __init__.py  skill.json
aria_skills/skill_guide/: SKILL.md  __init__.py  skill.json
aria_skills/social/: __init__.py  skill.json
aria_skills/unified_search/: __init__.py
aria_skills/working_memory/: __init__.py
aria_souvenirs/archive/: bubble_compliance_schema.sql
aria_souvenirs/aria_v3_060326/: DAILY_AUDIT_060326.md  IMPROVEMENT_PLAN.md  audit_stats_060326.json
aria_souvenirs/aria_v3_070326/: ARIA_AAA_SYSTEM_REVIEW_REPORT.md  DAILY_AUDIT_070326.md  INDEX.md  SOUVENIR_070326.md  ST-13-fix-partial-tool-call-context-cleanup.md  ST-14-token-budget-enforcement-context-build.md  ST-15-aria-token-self-awareness.md  ST-16-fix-ghost-sessions-prune-api-bug.md  ST-17-auto-trigger-memory-compression.md
aria_souvenirs/aria_v3_080326/: state_snapshot_2026-03-08_vault_backup.md
aria_souvenirs/aria_v3_100326/: INDEX.md  SOUVENIR_100326.md  SP6-T1_semantic_memory_pipeline_dead_end.md  SP6-T2_heartbeat_reflection_dead_end.md  SP6-T3_skill_activity_invisible_embeddings.md  SP6-T4_token_router_hardcoded_models.md  SP6-T5_skillresult_json_serialization.md  SP6-T6_importance_scoring_bifurcation.md  SPRINT_6_BOARD.md  SPRINT_AUDIT_PROOF.md
aria_souvenirs/aria_v3_120326/: INDEX.md  SOUVENIR_120326.md  SPRINT_7_BOARD.md
articles/: article_aria_memory_palace.html  article_aria_v3_full_system.html  article_the_shield_wall.html
deploy/mac/: MLX_SETUP.md  com.aria.mlx-server.plist
docs/: RPG_SYSTEM.md  RUNBOOK.md  article_llm_self_awareness_experiment.md  benchmarks.md
plans/: STREAMING_TOOL_PIPELINE_PROJECT.md
prompts/: ARIA_AAA_SYSTEM_REVIEW_SWARM.md  ARIA_COMPLETE_REFERENCE.md  ARIA_PROJECT_REVIEW_SWARM.md  MODEL_CENTRALISATION_SPRINT.md  P0_SANDBOX_AND_SKILL_LOADING_AUDIT.md  PO_DOC_IMPLEMENTATION_GAP_ANALYSIS.md  PO_MEGA_REPO_CLEANUP_PROMPT_V2.md  PO_SCRUM_SPRINT.md  SKILL_AUDIT_SPRINT.md  agent-workflow.md
scripts/: _create_gitkeeps.py  apply_patch.sh  audit_invoke.py  audit_post_routes.py  audit_routes.py  audit_skills.py  backup_db.sh  benchmark_models.py  check_architecture.py  deploy_production.sh  first-run.ps1  first-run.sh  generate_litellm_config.py  generate_skill_audit.py  health_check.sh  import_working_memory_seed.sh  pre-commit-hook.sh  seed_identity_memory.sh  talk_to_aria.py  verify_deployment.sh  verify_tab_tokens.py
scripts/rpg/: rpg_chat.py  rpg_roundtable.py  rpg_send.py  rpg_session.py
src/api/: agents_sync.py  auth.py  config.py  cron_sync.py  entrypoint.sh  main.py  models_sync.py  requirements.txt  security_middleware.py  sentiment_autoscorer.py
src/web/: app.py
stacks/brain/: .env.example  ENV.md  docker-compose.yml  litellm-config.yaml  working_memory_seed.default.json
tasks/: lessons.md
tests/: check_architecture.py  test_activities_creative.py  test_artifacts_router.py  test_cross_entity.py  test_docker_health.py  test_engine_focus.py  test_engine_roundtable_router.py  test_goals.py  test_imports.py  test_lessons.py  test_memories.py  test_noise_filters.py  test_operations.py  test_security_middleware.py  test_self_healing.py  test_sentiment.py  test_sprint7_cognition.py  test_streaming.py  test_telegram.py  test_validation.py  test_websocket.py  test_workflows.py  test_working_memory.py
tests/e2e/: runtime_smoke_check.py  test_chat_flow.py  verify_deployment.sh
tests/integration/: audit_invoke.py  audit_post_routes.py  audit_skills.py  check_rpg_tools.py  conftest.py  guardrail_web_api_path.py  test_health.py  verify_schema_refs.py  verify_tab_tokens.py
tests/load/: benchmark_models.py  run-load-test.sh
tests/skills/: test_agent_manager.py  test_api_client.py  test_goals.py  (+4 more)
(+143 files in other folders)
